rs/rs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokyomap-resource
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokyomap-resource
  template:
    metadata:
      labels:
        app: tokyomap-resource
    spec:
      enableServiceLinks: false
      containers:
      - name: resource-container
        image: tokyomap-resource:dev
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
