rs/rs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokyomap-resource-service
spec:
  selector:
    app: tokyomap-resource
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
