rs/rs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rs-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - rs.localhost
  rules:
  - host: rs.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tokyomap-resource-service
            port:
              number: 8081
